syntax = "proto3";

option csharp_namespace = "OVB.Demos.Ecommerce.Microsservices.AccountManagement.WebGrpc";

package greet;

service HealthChecks{
	rpc ReadinessHealthCheck returns (ReadinessHealthCheckOutput);
}

message ServiceReadiness{
	string service_name = 1;
	string service_version = 2;
	string service_description = 3;
	string service_is_ready = 4;
}

message ReadinessHealthCheckOutput {
	string ready = 1;
	repeated ServiceReadiness services = 2;
}